--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   fluttertoast: ^8.1.1
+  flutter_local_notifications: ^9.6.0
+  timezone: ^0.8.0
+  rxdart: ^0.27.4
 
 dev_dependencies:
   flutter_test:
